fix: flex wrap estava quebrando o card em outras resoluções

--- a/pesquisador-github-2Desafio/src/App.css
+++ b/pesquisador-github-2Desafio/src/App.css
@@ -53,7 +53,6 @@
     padding: 30px;
     border-radius: 25px; 
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     gap: 20px;
 }
